--- a/P1/index.html
+++ b/P1/index.html
@@ -3,15 +3,41 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Cuingenio. Los mejores cubos del mercado. </title>
+    <title>Cuboingenio. Los mejores cubos del mercado. </title>
   </head>
   <body>
+    <div class="Cabecera">
+      <h3>¿Necesitas Ayuda?</h3> 
+    </div>
+
+    <img id="Logos" src="logo.svg" style="text-align: center;" alt="logo_cubingenio">
+    <div class="Botones">
+      <button class="button"> <a href="index.html"><span id="b1">Cubos 2x2</span ></a></button>
+      <button class="button"> <a href="index.html"><span id="b1">Cubos 3x3</span></a></button>
+      <button class="button"> <a href="index.html"><span id="b1">Cubos 4x4</span></a></button>
+      <button class="button"> <a href="index.html"><span id="b1">Cubos 5x5</span></a></button>
+      <button class="button"> <a href="index.html"><span id="b1">Otros Cubos</span></a></button>
+    </div>
+    <div class="Page">
       <table>
-          <th id="Portada" style="width:20%">
-            <img id="Logos" src="logo.jpg" alt="logo_cubingenio">
+        <tr>
+          <th>
+            <div style="margin-left: 17%;"></div>
           </th>
+          <th>
+            <table>
+              <tr>
+                <th>
+                  <div id="ParteCentral" ><p class="b2">¿Quienes somos?</p></div>
+                </th>
+                <th>
+                  <div id="ParteCentral" ><p class="b2">Preguntas frecuentes</p></div>
+                </th>
+              </tr>
+            </table>
+          </th>
+        </tr>
       </table>
-      <p>Bienvenido a la página web de Cubingenio</p>
-      <button> <a href="index.html">Inicio</a></button>
+    </div>
   </body>
 </html>
