--- a/P1/index.html
+++ b/P1/index.html
@@ -9,33 +9,28 @@
     <div class="Cabecera">
       <h3>¿Necesitas Ayuda?</h3> 
     </div>
-
-    <img id="Logos" src="logo.svg" style="text-align: center;" alt="logo_cubingenio">
+    <div class="Portada">
+      <img id="Logos" src="logo.svg" style="text-align: center" alt="logo_cubingenio">
+    </div>
+    
     <div class="Botones">
-      <button class="button"> <a href="index.html"><span id="b1">Cubos 2x2</span ></a></button>
+      <button class="button"> <a href="index.html"><span id="b1">Cubos 2x2</span></a></button>
       <button class="button"> <a href="index.html"><span id="b1">Cubos 3x3</span></a></button>
       <button class="button"> <a href="index.html"><span id="b1">Cubos 4x4</span></a></button>
-      <button class="button"> <a href="index.html"><span id="b1">Cubos 5x5</span></a></button>
       <button class="button"> <a href="index.html"><span id="b1">Otros Cubos</span></a></button>
     </div>
-    <div class="Page">
+    <div class="Producto">
       <table>
         <tr>
+          <th><img src="logo_small_icon_only.png" alt="Producto Ofertado"></th>
           <th>
-            <div style="margin-left: 17%;"></div>
-          </th>
-          <th>
-            <table>
-              <tr>
-                <th>
-                  <div id="ParteCentral" ><p class="b2">¿Quienes somos?</p></div>
-                </th>
-                <th>
-                  <div id="ParteCentral" ><p class="b2">Preguntas frecuentes</p></div>
-                </th>
-              </tr>
-            </table>
-          </th>
+            <div class="Oferta" style="background: cornsilk;">
+              <h1 style="text-align: left; color: black;">Cubo 2x2</h1>
+              <h3 style="text-align: left;">Cubo de 2 piezas por 2 piezas en cada cara con diseño curvilíneo
+                 con el fin de adaptarse mejor a la mano del usuario que lo utiliza.</h3>
+              <h3 style="text-align: left;">Característcicas:</h3>
+              
+            </div>              
         </tr>
       </table>
     </div>
