--- a/P1/index.html
+++ b/P1/index.html
@@ -22,34 +22,42 @@
     <div class="Producto">
       <table>
         <tr>
-          <th><img src="cubo_2x2.png" style="width: 300px;" alt="Producto Ofertado"></th>
-          <th>
-            <div class="Oferta" style="background: cornsilk;">
-              <h1 style="text-align: left; color: black;">Cubo 2x2</h1>
-              <h3 style="text-align: left;">Cubo de 2 piezas por 2 piezas en cada cara con diseño curvilíneo
-                 con el fin de adaptarse mejor a la mano del usuario que lo utiliza.</h3>
-              <h3 style="text-align: left;">Precio:</h3>
-              <h1 style="color: black;"><s style="color: red;"><b style="color: black;">15€</b></s>  10€</h1>
-            </div>
+          <div>
+            <th><img src="cubo_2x2.png" style="width: 300px;" alt="Producto Ofertado"></th>
+            <th style="width:50%">
+              <div class="Oferta" style="background: cornsilk;">
+                <h1 style="text-align: left; color: black;">Cubo 2x2</h1>
+                <h3 style="text-align: left;">Cubo de 2 piezas por 2 piezas en cada cara con diseño curvilíneo
+                  con el fin de adaptarse mejor a la mano del usuario que lo utiliza.</h3>
+                <h3 style="text-align: left;">Precio:</h3>
+                <h1 style="color: black;"><s style="color: red;"><b style="color: black;">15€</b></s>  10€</h1>
+              </div>
+          </div>            
+        </tr>
+        <tr>
+          <div>
             <th><img src="cubo_4x4.png" style="width: 300px;" alt="Segundo producto ofertado"></th>
-            <th>
+            <th style="width:10%">
               <div class="Oferta" style="background: cornsilk;">
                 <h1 style="text-align: left; color: black;">Cubo 4x4</h1>
                 <h3 style="text-align: left;">Cubo de 4 colores por 4 colores en cada cara con diseño curvilíneo
                    con el fin de adaptarse mejor a la mano del usuario que lo utiliza.</h3>
                 <h3 style="text-align: left;">Precio</h3>
                 <h1 style="color: black;"><s style="color: red;"><b style="color: black;">19€</b></s>  14€</h1>
-  
-              </div>
-            </th>
+            </div>
+          </div>
+        </tr>
+        <tr>
+          <div>
             <th><img src="cubo_especial.png" style="width: 300px;" alt="Cubo Especial"></th>
-            <th>
+            <th style="width:10%">
               <div class="Oferta" style="background: cornsilk;">
-              <h1 style="text-align: left; color: black;">Cubo Megamix</h1>
-              <h3 style="text-align: left;">Cubo de 12 caras. Es de los cubos más sencillos de hacer si quieres empezar con los cubos más extravagantes.</h3>
-              <h3 style="text-align: left;">Precio:</h3>
-              <h1 style="color: black;"><s style="color: red;"><b style="color: black;">25€</b></s>  16€</h1>
-            </div></th>              
+                <h1 style="text-align: left; color: black;">Cubo Megamix</h1>
+                <h3 style="text-align: left;">Cubo de 12 caras. Es de los cubos más sencillos de hacer si quieres empezar con los cubos más extravagantes.</h3>
+                <h3 style="text-align: left;">Precio:</h3>
+                <h1 style="color: black;"><s style="color: red;"><b style="color: black;">25€</b></s>  16€</h1>
+              </div>
+          </div> 
         </tr>
       </table>
     </div>
