--- a/P1/index.html
+++ b/P1/index.html
@@ -14,16 +14,16 @@
     </div>
     
     <div class="Botones">
-      <button class="button"> <a href="index.html"><span id="b1">Cubos 2x2</span></a></button>
-      <button class="button"> <a href="index.html"><span id="b1">Cubos 3x3</span></a></button>
-      <button class="button"> <a href="index.html"><span id="b1">Cubos 4x4</span></a></button>
-      <button class="button"> <a href="index.html"><span id="b1">Otros Cubos</span></a></button>
+      <button class="button"> <a href="cubo2x2.html"><span id="b1">Cubos 2x2</span></a></button>
+      <button class="button"> <a href="cubo3x3.html"><span id="b1">Cubos 3x3</span></a></button>
+      <button class="button"> <a href="cubo4x4.html"><span id="b1">Cubos 4x4</span></a></button>
+      <button class="button"> <a href="cuboespecial.html"><span id="b1">Otros Cubos</span></a></button>
     </div>
     <div class="Producto">
       <table>
         <tr>
           <div>
-            <th><img src="cubo_2x2.png" style="width: 300px;" alt="Producto Ofertado"></th>
+            <th><a href="cubo2x2.html"><img src="cubo_2x2.png" style="width: 300px;" alt="Producto Ofertado"></a></th>
             <th style="width:50%">
               <div class="Oferta" style="background: cornsilk;">
                 <h1 style="text-align: left; color: black;">Cubo 2x2</h1>
@@ -36,7 +36,7 @@
         </tr>
         <tr>
           <div>
-            <th><img src="cubo_4x4.png" style="width: 300px;" alt="Segundo producto ofertado"></th>
+            <th><a href="cubo4x4.html"><img src="cubo_4x4.png" style="width: 300px;" alt="Segundo producto ofertado"></a></th>
             <th style="width:10%">
               <div class="Oferta" style="background: cornsilk;">
                 <h1 style="text-align: left; color: black;">Cubo 4x4</h1>
@@ -49,7 +49,7 @@
         </tr>
         <tr>
           <div>
-            <th><img src="cubo_especial.png" style="width: 300px;" alt="Cubo Especial"></th>
+            <th><a href="cuboespecial.html"><img src="cubo_especial.png" style="width: 300px;" alt="Cubo Especial"></a></th>
             <th style="width:10%">
               <div class="Oferta" style="background: cornsilk;">
                 <h1 style="text-align: left; color: black;">Cubo Megamix</h1>
