--- a/P4/index.html
+++ b/P4/index.html
@@ -15,13 +15,24 @@
     <!-- Cargar el proceso asociado a esta página -->
     <script src="index.js" defer></script>
 
-    <title>Mi APP (version 8)</title>
+    <title>Mi APP (version 10)</title>
 </head>
 <body>
     <h1>INTERFAZ GRÁFICA</h1>
     <img src="logo-urjc.png" alt="Logo-URJC" width=150px>
-    <p>   <input type="button" value="Test" id="btn_test"> </p>
 
+    <hr>
+    <h2>Información:</h2>
+    <ul>
+        <li>Arquitectura: <span id="info1" class="blue"></span> </li>
+        <li>Plataforma: <span id="info2" class="blue"></span></li>
+        <li>Diretorio: <span id="info3" class="blue"></span></li>
+    </ul>
+
+    <hr>
+    <p>Mensajes enviados desde el proceso main:</p>
+    <p>Print:  <span id='print' class="red"></span> </p>
+    <p>   <input type="button" value="Test" id="btn_test"> </p>
    <p>Display:</p>
     <p id="display"></p>
 </body>
