--- a/P2/L6/Index-Ejercicio6.html
+++ b/P2/L6/Index-Ejercicio6.html
@@ -11,6 +11,6 @@
     <p>Tenemos muchos muchos cuboos</p>
     <p>Si quiere iniciar sesión pulsa el botón de abajo</p>
     <p></p>
-    <a href="/">Login</a>
+    <a href="/formulario">Login</a>
 </body>
 </html>
