--- a/P2/L6/Index-Ejercicio6.html
+++ b/P2/L6/Index-Ejercicio6.html
@@ -11,6 +11,12 @@
     <p>Tenemos muchos muchos cuboos</p>
     <p>Si quiere iniciar sesión pulsa el botón de abajo</p>
     <p></p>
-    <a href="/formulario">Login</a>
+    <p></p>
+    <a href='/producto1'>Producto 1</a>
+    <a href='/producto2'>Producto 2</a>
+    <a href='/producto3'>Producto 3</a>
+    <p></p>
+    <a href='/finalizar_compra'>Realizar compra</a>
+    <a href='/formulario'>Login</a>
 </body>
 </html>
