FIN DE LOS EJERCICIOS --> PRACTICA AL 100%

--- a/P2/S7/Ej-05.html
+++ b/P2/S7/Ej-05.html
@@ -11,6 +11,7 @@
     <h2>Búsquedas</h2>
     <p>Introduce producto a buscar</p>
     <input type="text" id="caja">
+    <a href="/busqueda">[Enviar]</a>
     <p id="display1"></p>
 </body>
 </html>
