--- a/P2/tienda_interfaz/index.html
+++ b/P2/tienda_interfaz/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="cliente.js" defer></script>
     <title>Tienda Pagina Principal</title>
 </head>
 <body>
@@ -18,5 +19,11 @@
     <p></p>
     <a href='/finalizar_compra'>Realizar compra</a>
     <a href='/formulario'>Login</a>
+    <p> </p>
+    <h2>Búsquedas</h2>
+    <p>Introduce producto a buscar</p>
+    <input type="text" id="caja">
+    <a href="/busqueda">[Enviar]</a>
+    <p id="display1"></p>
 </body>
 </html>
