--- a/P4/chat/index.html
+++ b/P4/chat/index.html
@@ -23,9 +23,9 @@
     <hr>
     <h2>Información:</h2>
     <ul>
-        <li>Arquitectura: <span id="info1" class="blue"></span> </li>
-        <li>Plataforma: <span id="info2" class="blue"></span></li>
-        <li>Diretorio: <span id="info3" class="blue"></span></li>
+        <li>Arquitectura: <span id="info_1" class="blue"></span> </li>
+        <li>Plataforma: <span id="info_2" class="blue"></span></li>
+        <li>Diretorio: <span id="info_3" class="blue"></span></li>
     </ul>
 
     <hr>
@@ -36,8 +36,7 @@
         <p>Versión de Node: <span id="info1" class="blue"></span> </p>
         <p>Versión de Chrome: <span id="info2" class="blue"></span></p>
         <p>Versión de Electron: <span id="info3" class="blue"></span></p>
-        <p>Dirección IP: <span id="info4" class="blue"></span></p>
-        <img src="" alt="Código QR" id="qr">
+        <p>Dirección IP: <span id="direccionip" class="blue"></span></p>
     </div>
 
     <div class="right" id="mensaje">
