--- a/P2/tienda_interfaz/finalizar_compra.html
+++ b/P2/tienda_interfaz/finalizar_compra.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="tienda_interfaz/css/formulario-style.css">
     <title>Finalizar Compra</title>
 </head>
 <body>
-    <h1>¡Datos Recibidos!</h1>
-    <p>Gracias por su compra: USUARIO</p>
-    <p>Guardamos el pedido</p>
-    <a href="/">Página Principal</a>
+    <div class="centrado">
+        <img src="/tienda_interfaz/css/logo_small.png" alt="Logo de CuboIngenio">
+        <br>
+        <h1>¡Datos Recibidos!</h1>
+        <p>Gracias por su compra: USUARIO</p>
+        <p>Guardamos el pedido</p>
+        <a href="/">Página Principal</a>
+    </div>
+
 </body>
 </html>
