--- a/P2/tienda_interfaz/Producto2.html
+++ b/P2/tienda_interfaz/Producto2.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>producto2</title>
+    <link rel="stylesheet" href="tienda_interfaz/css/producto-style.css">
+    <title>CuboIngenio Cubo 4x4</title>
 </head>
 <body>
-    <h1>Producto 2</h1>
-    <p>Gracias por su visita</p>
-
+    <h1>Cubo 4x4</h1>
+    <p style="text-align: center;">Gracias por su visita</p>
+    <hr>
     <p></p>
-    <a href="/carrito-producto2">Añadir al carro.</a>
+    <div class="izquierda">
+        <img src="tienda_interfaz/css/cubo_4x4.png" alt="Cubo 4x4" style="width: 100px;">
+    </div>
+    <div class="derecha">
+        <a href="/carrito-producto2">Añadir al carro.</a>
     <p>Cantidad de productos en el carro: 0</p>
-    <a href="/">Vuelta a la página principal</a>
+    </div>
+    <div class="barra_baja">
+        <a href="/">Vuelta a la página principal</a>
+    </div>
 </body>
 </html>
