--- a/P2/tienda_interfaz/error.html
+++ b/P2/tienda_interfaz/error.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error al iniciar sesión</title>
 </head>
-<body>
+<body style="margin-left: 25%; background-color: rgb(226, 181, 190);;">
+    <img src="/tienda_interfaz/css/logo_small.png" alt="Logo">
     <h1>¡Tu cuenta no está en nuestra base de datos! :(</h1>
     <p>Compruebe si ha escrito bien su usuario y contraseña</p>
-    <p>Username: NOMBRE DE USUARIO</p>
-    <P>Password: CONTRASEÑA</P>
+    <b><p>Username: NOMBRE DE USUARIO</p></b>
+    <b><P>Password: CONTRASEÑA</P></b>
     HTML_EXTRA
     <p></p>
-    <a href="/">Acceso al formulario</a>
+    <a href="/formulario">Volver al formulario</a>
 </body>
 </html>
