--- a/P2/tienda_interfaz/respuesta.html
+++ b/P2/tienda_interfaz/respuesta.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo 3</title>
 </head>
-<body>
-    <h1>¡Datos Recibidos!</h1>
-    <p>Gracias por su compra</p>
-    <p>Username: USERNAME</p>
-    <P>Password: PASSWORD</P>
-    HTML_EXTRA
-    <p></p>
-    <a href="/">Acceso al formulario</a>
+<body style="background-color:white ; text-align: center;">
+    <img src="/tienda_interfaz/css/logo_small.png" alt="Logo">
+    <div style="background-color: rgb(226, 181, 190);">
+        <h1>¡Datos Recibidos!</h1>
+        <p>Gracias por su compra</p>
+        <p>Recibirá proximamente su pedido.</p>
+        <p></p>
+        <a href="/">Volver a Cuboingenio</a>   
+    </div> 
 </body>
 </html>
