--- a/P3/init.html
+++ b/P3/init.html
@@ -7,11 +7,15 @@
     <title>Formulario de Acceso</title>
 </head>
 <body>
-    <form action="/chat.html" method="get">
-        Nickname:
-        <input type="text" name="Nickname"/>
-        <p></p>
-        <input type="submit" value="Enviar"/>
+    <form action="/chat.html" method="get" style="background-color: cornsilk;">
+        <div style="text-align: center;">
+            <h1>Bienvenido al Foro Romano</h1>
+            <p></p>
+            <P>En este chat podrás comentar con otros senadores que estén conectados.</P>
+            <p>¡Qué te sea leve!</p>
+            <input type="submit" value="ENTRAR"/>
+        </div>
+
     </form>
 </body>
 </html>
