chat no usado al final

--- a/P3/chat.html
+++ b/P3/chat.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilos.css">
-  <title>Chat Super</title>
+  <title>Foro Romano</title>
 
   <!-- Cargar la biblioteca Socket.IO. Nos la debe entregar el servidor -->
   <script src="/socket.io/socket.io.js"></script>
@@ -14,13 +14,20 @@
   <script src="chat.js" defer></script>
 </head>
 
-<body style="background-color: aqua;">
-  <h2>Mini Chat</h2>
-  <input type="text" placeholder="Escribe aquí los mensajes..." autocomplete="off" id="msg_entry">
-  <h3>Mensajes recibidos</h3>
+<body>
+  <span>
+    <div class="titulo">
+      <h2>Foro Romano</h2>
+    </div>
+  </span>
+
   <div>
     <hr>
     <p id="display" class="contenedor"></p>
+    <div class="contenedor_pequeño">
+      <input type="text" placeholder="Escribe aquí los mensajes..." autocomplete="off" id="msg_entry">
+    </div>
+    
   </div>
 
 </body>
