--- a/P4/chat/index.html
+++ b/P4/chat/index.html
@@ -8,14 +8,13 @@
     <!-- Permitir sólo scripts y ficheros de la máquina local -->
     <!-- Con esto se elimina el aviso de seguridad: Insecure Content-Security-Policy -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';" />
-
+    
     <!-- Hoja de estilo de la interfaz -->
     <link rel="stylesheet" href="css/estilos.css">
 
     <!-- Cargar el proceso asociado a esta página -->
     <script src="index.js" defer></script>
-
-    <title>ROMA CHAT</title>
+    <title>Foro Romano</title>
 </head>
 <body>
     <h1>ROMA CHAT</h1>
