--- a/P1/cubo4x4.html
+++ b/P1/cubo4x4.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.png">
     <title>Cuboingenio. Los mejores cubos del mercado. </title>
   </head>
   <body>
@@ -36,5 +37,10 @@
             </tr>
           </table>       
     </div>
+    <br>
+    <div class="Producto" style="background: cyan;">
+      <a href="index.html" style="margin: 10px auto; text-align: center;"><img src="logo_small_icon_only.png" style="width: 15px;" alt="Volver al inicio">Pagina Inicio</a>
+    </div>
+    
   </body>
 </html>
