--- a/P1/index.html
+++ b/P1/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.png">
     <title>Cuboingenio. Los mejores cubos del mercado. </title>
   </head>
   <body>
