--- a/P4/chat/index.html
+++ b/P4/chat/index.html
@@ -20,7 +20,7 @@
     <h1>ROMA CHAT</h1>
     <div class="information">
         <b>Este foro ha sido creado para reunirse los senadores del glorioso imperio romano</b>
-        <b> y así evitar los acontencimientos acecidos en los idus de marzo con el fallecimiento de César.</b>
+        <b> y así evitar los acontencimientos acaecidos en los idus de marzo con el fallecimiento de César.</b>
     </div>
     <div  class="contenedor" >
         <p><span id="displays"></span></p>
