--- a/P5/index.html
+++ b/P5/index.html
@@ -51,61 +51,60 @@
         <img src="images/logo/logo_large.png" alt="logo_cubingenio" style="display: block;margin: auto;width: 100%;">
     </div>
 
-    <!-- Pestañas con las opciones a comprar-->
-    <section>
 
-    </section>
-
-<div id="columna1">
-    <span>
-        <a href="#">
-            <button class="button_init">
-                <h2>Inicio</h2>
-            </button>
-        </a> 
-        <a href="#">
-            <button class="button_init">
-                <h2>Productos</h2>
-            </button>
-        </a>
-        <a href="#">
-            <button class="button_init">
-                <h2>Ofertas</h2>
-            </button>
-        </a>
-        <a href="#">
-            <button class="button_init">
-                <h2>Tiendas</h2>
-            </button>
-        </a>
-        <a href="#">
-            <button class="button_init">
-                <h2>Contacto</h2>
-            </button>
-        </a>
-
-    </span>
-</div>
-<div style="margin-left: 75%;">
-    <span>
-        <a href="#">
-            <span id="busqueda">
-                <input type="text" id="caja" placeholder="Search" style="width: 90%;">
-                <span class="display-extension">
-                    <div>
-                        <button id="display1" style="display: none;"></button>
-                    </div>
-                    <div>
-                        <button id="display2" style="display: none;"></button>
-                    </div>
-                    <div>
-                        <button id="display3" style="display: none;"></button>
-                    </div>                    
+<div style="background-color: blue; height: 15%; margin-bottom: 2cm;">
+    <div id="columna1">
+        <span>
+            <a href="#">
+                <button class="button_init">
+                    <h2>Inicio</h2>
+                </button>
+            </a> 
+            <a href="#">
+                <button class="button_init">
+                    <h2>Productos</h2>
+                </button>
+            </a>
+            <a href="#">
+                <button class="button_init">
+                    <h2>Ofertas</h2>
+                </button>
+            </a>
+            <a href="#">
+                <button class="button_init">
+                    <h2>Tiendas</h2>
+                </button>
+            </a>
+            <a href="#">
+                <button class="button_init">
+                    <h2>Contacto</h2>
+                </button>
+            </a>
+    
+        </span>
+    </div>
+    <div style="margin-left: 75%;">
+        <span>
+            <a href="#">
+                <span id="busqueda">
+                    <input type="text" id="caja" placeholder="Search" style="width: 90%;">
+                    <span class="display-extension">
+                        <div>
+                            <button id="display1" style="display: none;"></button>
+                        </div>
+                        <div>
+                            <button id="display2" style="display: none;"></button>
+                        </div>
+                        <div>
+                            <button id="display3" style="display: none;"></button>
+                        </div>                    
+                    </span>
                 </span>
-            </span>
-        </a>
-    </span>
+            </a>
+        </span>
+    </div>
 </div>
+
 
 <br>
     <!-- Pie de página de la tienda web -->
