--- a/P5/P3/register.html
+++ b/P5/P3/register.html
@@ -25,9 +25,9 @@
         <div>
             <hr>
             <h1 class="titulo">Introduzca su Nick:</h1>
-            <div class="contenedor_pequeño">
+            <!--<div class="contenedor_pequeño">
                 <input type="text" placeholder="Escribe aquí el nombre de usuario" autocomplete="off" id="register_entry">
-            </div>
+            </div>-->
             <form action="/chat.html" method="get" style="background-color: cornsilk;">
                 <div style="text-align: center;">
                     <input type="text" placeholder="Escribe aquí el nombre de usuario" autocomplete="off" id="register_entry">
