--- a/P5/P3/init.html
+++ b/P5/P3/init.html
@@ -7,7 +7,7 @@
     <title>Formulario de Acceso</title>
 </head>
 <body>
-    <form action="/register.html" method="get" style="background-color: cornsilk;">
+    <form action="/chat.html" method="get" style="background-color: cornsilk;">
         <div style="text-align: center;">
             <h1>Bienvenido al Foro Romano</h1>
             <p></p>
